load("@rules_rust//cargo:defs.bzl", "cargo_build_script")

cargo_build_script(
  name = "build_script",
  srcs = ["build.rs"],
)

platform(
  name = "linux",
  constraint_values = [
    "@platforms//os:linux",
    "@platforms//cpu:x86_64",
  ],
)

platform(
  name = "macos",
  constraint_values = [
    "@platforms//os:macos",
    "@platforms//cpu:aarch64",
  ],
)
